--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    
+    "dotenv": "^16.0.0"
   },
   "repository": {
     "type": "git",
