chore: setup desciption package json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fix-icarefone-transfer-backup-failed",
   "version": "1.0.0",
-  "description": "if u get a backup failed just use this script to fix everything after manually copying your backup to a safe location",
+  "description": "If u get a backup failed in the iCareFone Transfer application, just use this script to fix everything after manually copying your backup to a safe location",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
