--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 ICAREFONE_TRANSFER_BACKUP_FOLDER_PATH="/iCareFone Transfer/BackupFunction/WhatsApp/2022-02-15 22-26-02"
 MOBILEOS=ANDROID
+COMPUTEROS=WINDOWS
